fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ a.nav-link {
 .about-header {
     font-weight:bold;
     padding-bottom: 50px;
-    text-align: center;
+    text-align: left;
 
 }
 
